--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:keepScreenOn="true"
+    android:background="@drawable/background"
     tools:context=".MainActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
