same functionality but sector.xml is not needed anymore

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
     <GridLayout
         android:id="@+id/field"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/brett9"
         android:columnCount="7"
