--- a/app/src/main/res/layout/options_layout.xml
+++ b/app/src/main/res/layout/options_layout.xml
@@ -13,59 +13,59 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginTop="@dimen/margin_size"
+            android:layout_marginLeft="@dimen/margin_size"
             android:text="@string/select_millVariant"
-            android:textSize="27sp" />
+            android:textSize="@dimen/text_size" />
 
     <Spinner
         android:id="@+id/millModeSpinner"
         android:prompt="@string/select_millVariant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="@dimen/margin_size" />
     
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginTop="@dimen/margin_size"
+            android:layout_marginLeft="@dimen/margin_size"
             android:text="@string/select_player_white"
-            android:textSize="27sp" />
+            android:textSize="@dimen/text_size" />
 
     <Spinner
         android:id="@+id/playerWhiteSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="@dimen/margin_size" />
     
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginTop="@dimen/margin_size"
+            android:layout_marginLeft="@dimen/margin_size"
             android:text="@string/select_player_black"
-            android:textSize="27sp" />
+            android:textSize="@dimen/text_size" />
 
     <Spinner
         android:id="@+id/playerBlackSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="@dimen/margin_size" />
     
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
+            android:layout_marginTop="@dimen/margin_size"
+            android:layout_marginLeft="@dimen/margin_size"
             android:text="@string/select_whoStarts"
-            android:textSize="27sp" />
+            android:textSize="@dimen/text_size" />
 
     <Spinner
         android:id="@+id/whoStartsSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginLeft="@dimen/margin_size" />
 
     <Button
         android:id="@+id/buttonOK"
