--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" 
     android:layout_height="wrap_content"
-    android:textSize="@dimen/text_size"
+    android:textSize="@dimen/text_size_spinner_item"
     android:gravity="left"
     android:padding="10dp"
 />
