--- a/app/src/main/res/values-large/dimens.xml
+++ b/app/src/main/res/values-large/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
    <dimen name="text_size">40sp</dimen>
+    <dimen name="text_size_spinner_item">34sp</dimen>
    <dimen name="margin_size">30dp</dimen>
 </resources>
