added setting animations
- in the setting phase now you can see every players
  pieces that he can place
- clicking somewhere now causes the piece to move
  from one layout into the layout of the gameboard

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,5 +40,11 @@
         android:columnOrderPreserved="true" >
     </GridLayout>
 
+    <FrameLayout
+        android:id="@+id/player_pieces_space"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+    </FrameLayout>
 
 </LinearLayout>
